--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,40 +1,33 @@
-# path: .github/workflows/backend.yml
-- '.github/workflows/backend.yml'
-pull_request:
-branches: [ main ]
-paths:
-- 'backend/**'
-- '.github/workflows/backend.yml'
-
-
-concurrency:
-group: backend-${{ github.ref }}
-cancel-in-progress: true
-
-
-permissions:
-contents: read
-
+name: backend
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend.yml'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend.yml'
 
 jobs:
-test:
-runs-on: ubuntu-latest
-defaults:
-run:
-working-directory: backend
-steps:
-- uses: actions/checkout@v4
-- uses: actions/setup-python@v5
-with:
-python-version: '3.11'
-cache: 'pip'
-cache-dependency-path: backend/requirements.txt
-- name: Install dependencies
-run: |
-python -m pip install -U pip
-python -m pip install -r requirements.txt
-python -m pip install pytest
-- name: Run tests
-run: pytest -q
-
-
+  test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: backend/requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip
+          python -m pip install -r requirements.txt
+          python -m pip install pytest
+      - name: Run tests
+        run: pytest -q
