--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,30 +1,46 @@
 name: frontend
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend.yml'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend.yml'
+push:
+branches: [ main ]
+paths:
+- 'frontend/**'
+- '.github/workflows/frontend.yml'
+pull_request:
+branches: [ main ]
+paths:
+- 'frontend/**'
+- '.github/workflows/frontend.yml'
+
+
+concurrency:
+group: frontend-${{ github.ref }}
+cancel-in-progress: true
+
+
+permissions:
+contents: read
+
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-      - name: Install
-        run: npm ci
-      - name: Build
-        run: npm run build
+build:
+runs-on: ubuntu-latest
+defaults:
+run:
+working-directory: frontend
+steps:
+- uses: actions/checkout@v4
+- uses: actions/setup-node@v4
+with:
+node-version: '18'
+cache: 'npm'
+cache-dependency-path: frontend/package-lock.json
+- name: Install deps (ci if lockfile, else install)
+run: |
+if [ -f package-lock.json ]; then
+npm ci
+else
+echo "package-lock.json not found -> using npm install"
+npm install
+fi
+- name: Build
+run: npm run build
