--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -13,6 +13,8 @@ on:
 
 jobs:
   build:
+    # Skip if the frontend app isn't present on this ref
+    if: ${{ hashFiles('frontend/package.json') != '' }}
     runs-on: ubuntu-latest
     defaults:
       run:
